# drawSwipePredictor

./: .gitignore  Cargo.toml  README.md
apps/desktop/: Cargo.toml
apps/desktop/src/: ctc_backend.rs  dtw_backend.rs  lib.rs  ui.rs
crates/swipe-engine/: Cargo.toml
crates/swipe-engine/src/: ctc.rs  dtw.rs  lib.rs  neural.rs  types.rs
training/: README.md  evaluate_model.py  pyproject.toml  train_ctc.py  visualize_samples.py
